@@ -32,6 +32,7 @@
 - fix master map source server unavailable handling.
 - add autofs_ldap_auth.conf man page.
 - fix random selection for host on different network.
+- make redhat init script more lsb compliant.
 
 03/09/2009 autofs-5.0.5
 -----------------------
